# express/server/api/controllers/photos/controller.ts
@@ -1,6 +1,9 @@
-import { Controller, Get, Post, Route } from 'tsoa';
+import L from '../../../common/logger';
+import { Controller, Get, Post, Route, Request } from 'tsoa';
 import { PhotosService } from '../../services/photos.service';
 import * as line from '@line/bot-sdk';
+import express from 'express';
+import { MachinesModel } from '../../models/machines.model';
 
 const photosService = new PhotosService();
 
@@ -9,7 +12,9 @@ const lineClient = new line.Client({
   channelSecret: process.env.LINE_CH_SECRET.toString(),
 });
 
-const base64Cache: { [key: string]: string } = {};
+const machinesModel = new MachinesModel();
+
+const base64Cache: { [key: string]: { base64: string; count: number } } = {};
 
 @Route('photos')
 export class PhotosController extends Controller {
@@ -19,26 +24,40 @@ export class PhotosController extends Controller {
     return lastTitle;
   }
 
-  @Post('/receiver/{uniqueCode}/{index}/{length}/{base64}')
-  public async receivePhotoData(uniqueCode: string, index: number, length: number, base64: string): Promise<string> {
-    if (!(uniqueCode in base64Cache)) {
-      base64Cache[uniqueCode] = '';
+  @Post('/receiver/{uniqueCode}/{length}/{base64}')
+  public async receivePhotoData(uniqueCode: string, length: number, @Request() req: express.Request): Promise<string> {
+    if (!(await machinesModel.getMachineByUniqueCode(uniqueCode))) {
+      return 'invalid unique code.';
     }
 
-    base64Cache[uniqueCode] += base64;
-    console.log(base64Cache[uniqueCode]);
+    if (length > 20) {
+      return 'plz under 20.';
+    }
 
-    if (index !== length) {
+    if (!(uniqueCode in base64Cache)) {
+      base64Cache[uniqueCode] = {
+        base64: '',
+        count: 0,
+      };
+    }
+
+    base64Cache[uniqueCode].base64 = req.path.split(`${uniqueCode}/${length}/`)[1];
+    ++base64Cache[uniqueCode].count;
+
+    if (length !== base64Cache[uniqueCode].count) {
       return 'received';
     }
 
     const msg = await photosService.msgOfNewPhoto(
       uniqueCode,
       process.env.SERVER_HOST || 'tmp.cow.kit-victims.org',
-      base64Cache[uniqueCode]
+      base64Cache[uniqueCode].base64
     );
+
     base64Cache[uniqueCode] = null; // GC
+
     await lineClient.pushMessage(msg.destinationId, msg.msg);
+
     return 'received';
   }
 }
